Ajuste na documentação.
