# src/controllers/ProductSalesController.js
@@ -8,7 +8,7 @@ const { validateErrors } = require("../utils/functions");
 module.exports = {
 
     async updateOnePrice(req, res) {
-    // #swagger.tags = ['Produtos_Vendas']
+    // #swagger.tags = ['Vendas']
     // #swagger.description = 'Endpoint que atualiza a quantidade de produtos de uma venda.'
     /*#swagger.parameters['sale_id'] = {
       in: 'path',
